Continuando a arrumar a estrutura

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				<div class="navDiv">
 					<nav class="firstNav">
 						<ul>
-							<li class="firstLi"><a href=""> EMPRESA </a></li>
-							<li class="secondLi"><a href=""> Produtos </a></li>
+							<li class=""><a href=""> EMPRESA </a></li>
+							<li class=""><a href=""> Produtos </a></li>
 						</ul>
 					</nav>
 				</div>
@@ -63,14 +63,7 @@
 				</div>
 			</div>
 			<div class="content">
-				<div class="slides" id="slides">
-					<img src="Images/trihydral1.png">
-					<img src="Images/trihydral2.jpg">
-					<img src="Images/trihydral3.jpg">
-					<img src="Images/trihydral4.jpg">
-					<img src="Images/trihydral5.jpg">
-					<img src="Images/IMG-20160918-WA0024.jpg">
-				</div>
+				
 				<div class="squares">
 					<div class="divleft box" >
 						<div  class="allBoxes boxLeft">
@@ -109,6 +102,36 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="secondLine">
+					<div class="slides" id="slides">
+						<img src="Images/trihydral1.png">
+						<img src="Images/trihydral2.jpg">
+						<img src="Images/trihydral3.jpg">
+						<img src="Images/trihydral4.jpg">
+						<img src="Images/trihydral5.jpg">
+						<img src="Images/IMG-20160918-WA0024.jpg">
+					</div>
+
+					<aside class="clients">
+						<h2 class="block-title">
+							O que os clientes falam
+						</h2>
+						<div class="feedback">
+							<p > Flavia Targino </p>
+							<blockquote>
+								"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dapibus justo at justo facilisis, et gravida lacus ornare. Proin nisl mauris, pretium et euismod a, congue quis odio."
+							</blockquote>						
+						</div>
+						<div class="feedback">
+							<p > Flavia Targino </p>
+							<blockquote>
+								"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dapibus justo at justo facilisis, et gravida lacus ornare. Proin nisl mauris, pretium et euismod a, congue quis odio."
+							</blockquote>						
+						</div>
+					</aside>
+				</div>
+
 			</div>
 			
 		</body>
