--- a/index.html
+++ b/index.html
@@ -3,34 +3,11 @@
 	<head >
 		<link rel="stylesheet" type="text/css" href="CSS/index.css">
 		<title></title>
+		
 		<script src="Plugins/JQuery/jquery.js"></script>
 		<script src="Plugins/JQuery-sliders/jquery.slides.min.js"></script>
-		<script>
-		$(function() {
-		$('#slides').slidesjs({
-		width: 940,
-		height: 450,
-		navigation: true,
-		play: {
-			active: false,
-			// [boolean] Generate the play and stop buttons.
-			// You cannot use your own buttons. Sorry.
-			effect: "fade",
-			// [string] Can be either "slide" or "fade".
-			interval: 3000,
-			// [number] Time spent on each slide in milliseconds.
-			auto: true,
-			// [boolean] Start playing the slideshow on load.
-			swap: true,
-			// [boolean] show/hide stop and play buttons
-			pauseOnHover: false,
-			// [boolean] pause a playing slideshow on hover
-			restartDelay: 2500
-			// [number] restart delay on inactive slideshow
-			}
-		});
-		});
-		</script>
+		<script src="JS/Tanja.js"></script>
+
 	</head>
 	<body class="body">
 		<div class="externDiv">
@@ -104,13 +81,22 @@
 				</div>
 
 				<div class="secondLine">
-					<div class="slides" id="slides">
-						<img src="Images/trihydral1.png">
-						<img src="Images/trihydral2.jpg">
-						<img src="Images/trihydral3.jpg">
-						<img src="Images/trihydral4.jpg">
-						<img src="Images/trihydral5.jpg">
-						<img src="Images/IMG-20160918-WA0024.jpg">
+
+					<div class="about" >
+						<article>
+							<h2 >Sobre a empresa</h2>
+						</article>
+						<div id="slides" class="slides">
+							<img src="Images/trihydral1.png">
+							<img src="Images/trihydral2.jpg">
+							<img src="Images/trihydral3.jpg">
+							<img src="Images/trihydral4.jpg">
+							<img src="Images/trihydral5.jpg">
+							<img src="Images/IMG-20160918-WA0024.jpg">
+						</div>
+						<p class="aboutDescript">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.							
+						</p>
 					</div>
 
 					<aside class="clients">
@@ -124,7 +110,7 @@
 							</blockquote>						
 						</div>
 						<div class="feedback">
-							<p > Flavia Targino </p>
+							<p > Marcelo Dantas</p>
 							<blockquote>
 								"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dapibus justo at justo facilisis, et gravida lacus ornare. Proin nisl mauris, pretium et euismod a, congue quis odio."
 							</blockquote>						
