--- a/index.html
+++ b/index.html
@@ -115,6 +115,52 @@
 					</aside>
 				</div>
 			</div>
-			
+			<footer>
+				<div class="allFooter">
+
+					<div class="firstFooter">
+						<span><i>
+							"Habilidade é o que você é capaz de fazer. Motivação determina o que você faz. Atitude determina a qualidade do que você faz."</i>
+						</span>
+						<span style="position: absolute;left: 50%;bottom: 70px; font-size: 12px;">
+							- Lou Holtz -
+						</span>
+
+
+					</div>
+
+					<div class="contact">
+						<h3>Contato</h3>
+							<div class="eachContact">
+								<img  src="Images/phone-call.png"> </img><span> (61) 3330-1502</span>
+							</div>
+							<div class="eachContact">
+								<img  src="Images/message-closed-envelope.png">	<span> gilbertotargino@hotmail.com</span>
+							</div>	
+							<div class="eachContact">
+								<img  src="Images/mobile-phone.png">	<span> (61) 98173-8569</span>
+							</div>
+							<div class="eachContact">
+								<img  src="Images/message-closed-envelope.png">	<span> gilbertotargino@hotmail.com</span>
+							</div>
+
+
+					</div>
+
+					<div class="local">
+						<h3 style="position: absolute; margin-right : 430px;">Localização</h3>
+						<iframe style="float : right; margin-top: 75px;" 
+							  width="100%"
+							  height="130"
+							  frameborder="0" style="border:0"
+							  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyArOTS88gbhP4DAn5Er9XMfHO-FceM4osk&q=Space+Needle,Seattle+WA" allowfullscreen>
+							</iframe>	
+					</div>
+
+
+				</div>
+
+				
+			</footer>
 		</body>
 	</html>
